--- a/docker_lab/task_4/templates/default.conf.template
+++ b/docker_lab/task_4/templates/default.conf.template
@@ -10,7 +10,7 @@ server {
     location /json_server/profile {
         proxy_pass http://json_server:8000/profile;
     }
-    location /lite_server {
+    location / {
         proxy_pass http://lite_server:3000;
     }
 }
